# psd

./: .gitignore  CMakeLists.txt  CMakePresets.json  image-cpp
.github/workflows/: macos-latest.yml  ubuntu-latest.yml  windows-latest.yml
headers/psd/: document.h  error.h
headers/psd/capi/: document.h  error.h
headers/psd/capi/document/: group.h  layer.h
headers/psd/document/: entry.h  group.h  layer.h
headers/psd/document/detail/: group_converter.h  group_processor.h  layer_converter.h  layer_processor.h  root_converter.h
headers/psd/llapi/: stream.h  structure.h
headers/psd/llapi/structure/: color_info.h  header.h  image.h  info.h  resource_info.h
headers/psd/llapi/structure/info/: extra_info.h  global_info.h  info_extra.h  layer_info.h
headers/psd/llapi/structure/info/extra_info/: default_extra.h  extra.h  section_divider.h
headers/psd/llapi/structure/info/info_extra/: layer16.h  layer32.h
headers/psd/llapi/structure/info/layer_info/: channel_data.h  layer_data.h
headers/psd/llapi/structure/info/layer_info/layer_data/: layer_data_extra.h
headers/psd/llapi/structure/info/layer_info/layer_data/layer_data_extra/: default_extra.h  extra.h  section_divider.h
headers/psd/llapi/structure/resource_info/: default_resource.h  layer_state.h  resolution_info.h  resource.h
include/psd/: document.h  structure.h
include/psd/capi/: document.h  error.h
include/psd/capi/document/: element.h  group.h  layer.h
include/psd/core/: compressor.h  decompressor.h  length_calculator.h  stream.h  unicode_convertor.h  unicode_string.h
include/psd/core/type/: blend.h  blending.h  color.h  compression.h  depth.h  error.h  rectangle.h  version.h
include/psd/document/: element.h  group.h  layer.h
include/psd/document/impl/: processor.h
include/psd/document/impl/convertor/: group.h  layer.h  root.h
include/psd/document/impl/processor/: group.h  layer.h
include/psd/structure/: color_info.h  final_image.h  header.h  main_info.h  resource_info.h  resource_info_element.h
include/psd/structure/main_info/: extra_info.h  extra_info_element.h  global_info.h  layer_info.h
include/psd/structure/main_info/extra_info/: section_divider.h  unicode_name.h
include/psd/structure/main_info/layer_info/: channel_data.h  layer_data.h
source/capi/: document.cc
source/capi/document/: group.cc  layer.cc
source/core/compressor/: rle.cc
source/core/decompressor/: rle.cc
source/structure/main_info/: extra_info.cc
sources/capi/: document.cc
sources/capi/document/: group.cc  layer.cc
sources/compressor/: rle.cc
sources/decompressor/: rle.cc
sources/llapi/structure/info/layer_info/: channel_data.cc
tests/: CMakeLists.txt
tests/sources/llapi/: stream_test.cc
tests/sources/llapi/structure/: header_test.cc
